--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           },
           {},
           {
-            lesson: '物理',
+            lesson: '数据结构',
             classroom: '教学楼301',
             color: 'color2',
             teacher: '张三',
@@ -122,7 +122,7 @@
             type: '选修'
           },
           {
-            lesson: '物理',
+            lesson: '数据结构',
             classroom: '教学楼301',
             color: 'color3',
             teacher: '张三',
@@ -143,7 +143,7 @@
         time: '3',
         cells: [
           {
-            lesson: '高等数学',
+            lesson: 'Python程序设计',
             classroom: '教学楼101',
             color: 'color2',
             teacher: '李四',
@@ -253,7 +253,7 @@
             type: '选修'
           },
           {
-            lesson: '物理',
+            lesson: 'Python程序设计',
             classroom: '教学楼301',
             color: 'color3',
             teacher: '张三',
@@ -284,7 +284,7 @@
           },
           {},
           {
-            lesson: '物理',
+            lesson: 'Python程序设计',
             classroom: '教学楼301',
             color: 'color2',
             teacher: '张三',
@@ -352,7 +352,7 @@
         time: '5',
         cells: [
           {
-            lesson: '高等数学',
+            lesson: '数据结构',
             classroom: '教学楼101',
             color: 'color2',
             teacher: '李四',
