--- a/index.html
+++ b/index.html
@@ -225,7 +225,14 @@
       },
       {
         time: '6',
-        cells: [{}, {}]
+        cells: [{}, {},        {
+            lesson: '大学化学',
+            classroom: '教学楼302',
+            color: 'color2',
+            teacher: '张子乐',
+            credit: '2.0',
+            type: '选修'
+          },]
       }
     ]
   },
@@ -386,10 +393,17 @@
           }
         ]
       },
-
       {
         time: '6',
-        cells: [{}, {}]
+        cells: [{}, {}, {
+            lesson: '大学化学',
+            classroom: '教学楼302',
+            color: 'color2',
+            teacher: '张子乐',
+            credit: '2.0',
+            type: '选修'
+          },
+]
       }
     ]
   }
